Calendar exclude walkingkooka/j2cl/java/util/timezone/support

--- a/pom.xml
+++ b/pom.xml
@@ -228,7 +228,8 @@
                 <configuration>
                     <excludes>
                         <exclude>walkingkooka/j2cl/java/util/locale/LocaleProvider*</exclude>
-                        <exclude>walkingkooka/j2cl/java/util/timezone/TimeZoneProvider*</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/timezone/support</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/timezone/support/*</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -239,7 +240,8 @@
                 <configuration>
                     <excludes>
                         <exclude>walkingkooka/j2cl/java/util/locale/LocaleProvider*</exclude>
-                        <exclude>walkingkooka/j2cl/java/util/timezone/TimeZoneProvider*</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/timezone/support</exclude>
+                        <exclude>walkingkooka/j2cl/java/util/timezone/support/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
