POM compiler showWarnings=true

--- a/pom.xml
+++ b/pom.xml
@@ -159,6 +159,7 @@
                         <arg>-Awalkingkooka.j2cl.java.util.TimeZone=GMT,Europe/*</arg>
                         <arg>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</arg>
                     </compilerArgs>
+                    <showWarnings>true</showWarnings>
                 </configuration>
             </plugin>
             <plugin>
