--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
 
         <dependency>
             <groupId>walkingkooka</groupId>
+            <artifactId>gwt-java-util-Locale</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>walkingkooka</groupId>
             <artifactId>j2cl-uber</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
@@ -164,8 +170,8 @@
                     <source>9</source>
                     <target>9</target>
                     <compilerArgs>
-                        <arg>-Awalkingkooka.j2cl.java.util.Locale=,EN-*,DE-DE</arg>
-                        <arg>-Awalkingkooka.j2cl.java.util.TimeZone=GMT,Europe/*</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Currency=XXX</arg>
+                        <arg>-Awalkingkooka.j2cl.java.util.Locale=*</arg>
                         <arg>-Awalkingkooka.j2cl.locale.Logging=SLASH_SLASH_COMMENTS</arg>
                     </compilerArgs>
                     <showWarnings>true</showWarnings>
@@ -187,6 +193,104 @@
                     <useFile>false</useFile>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.2.0</version>
+                <configuration>
+                    <excludes>
+                        <exclude>**/generated/**</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>3.3.0</version>
+                <executions>
+                    <execution>
+                        <id>create j2cl-java-util-Calendar-jar/temp</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>temp</classifier>
+                            <excludes>
+                                <exclude>java/**</exclude>
+                                <exclude>**/generated/**</exclude>
+                            </excludes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>walkingkooka</groupId>
+                <artifactId>walkingkooka-gwt-archive-maker-maven-plugin</artifactId>
+                <version>1.0-SNAPSHOT</version>
+                <executions>
+                    <execution>
+                        <id>build gwt-java-util-Calendar JAR</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>build</goal>
+                        </goals>
+                        <configuration>
+                            <input>target/j2cl-java-util-Calendar-1.0-SNAPSHOT-temp.jar</input>
+                            <output>target/gwt-java-util-Calendar-1.0-SNAPSHOT.jar</output>
+                            <pom-file>gwt-pom.xml</pom-file>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-install-plugin</artifactId>
+                <version>3.1.0</version>
+                <executions>
+                    <execution>
+                        <id>install walkingkooka:gwt-java-util-Calendar</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>install-file</goal>
+                        </goals>
+                        <configuration>
+                            <groupId>walkingkooka</groupId>
+                            <artifactId>gwt-java-util-Calendar</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                            <packaging>jar</packaging>
+                            <file>target/gwt-java-util-Calendar-1.0-SNAPSHOT.jar</file>
+                            <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-invoker-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>install</goal>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <cloneProjectsTo>${project.build.directory}/it-tests</cloneProjectsTo>
+                    <debug>true</debug>
+                    <invokerPropertiesFile>src/it/invoker.properties</invokerPropertiesFile>
+                    <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
+                    <settingsFile>src/it/settings.xml</settingsFile>
+                    <streamLogs>false</streamLogs>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -232,39 +336,32 @@
                     </dependency>
                 </dependencies>
             </plugin>
-            <plugin>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.2.0</version>
-                <configuration>
-                    <excludes>
-                        <exclude>**/generated/**</exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-invoker-plugin</artifactId>
-                <version>3.0.1</version>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>3.0.0</version>
                 <executions>
                     <execution>
+                        <id>deploy walkingkooka:gwt-java-util-Calendar</id>
+                        <phase>deploy</phase>
                         <goals>
-                            <goal>install</goal>
-                            <goal>integration-test</goal>
-                            <goal>verify</goal>
+                            <goal>deploy-file</goal>
                         </goals>
+                        <configuration>
+                            <groupId>walkingkooka</groupId>
+                            <artifactId>gwt-java-util-Calendar</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                            <packaging>jar</packaging>
+                            <file>target/gwt-java-util-Calendar-1.0-SNAPSHOT.jar</file>
+                            <url>https://maven-repo-254709.appspot.com</url>
+                            <repositoryId>github-mp1-appengine-repo</repositoryId>
+                        </configuration>
                     </execution>
                 </executions>
-                <configuration>
-                    <cloneProjectsTo>${project.build.directory}/it-tests</cloneProjectsTo>
-                    <debug>true</debug>
-                    <invokerPropertiesFile>src/it/invoker.properties</invokerPropertiesFile>
-                    <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
-                    <settingsFile>src/it/settings.xml</settingsFile>
-                    <streamLogs>false</streamLogs>
-                </configuration>
             </plugin>
         </plugins>
+        
         <!-- Manage plugin versions -->
         <pluginManagement>
             <plugins>
