maven-jar: exclude generated classes

--- a/pom.xml
+++ b/pom.xml
@@ -238,9 +238,7 @@
                 <version>3.2.0</version>
                 <configuration>
                     <excludes>
-                        <exclude>walkingkooka/j2cl/java/util/locale/LocaleProvider*</exclude>
-                        <exclude>walkingkooka/j2cl/java/util/timezone/support</exclude>
-                        <exclude>walkingkooka/j2cl/java/util/timezone/support/*</exclude>
+                        <exclude>**/generated/**</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -250,9 +248,7 @@
                 <version>3.0.1</version>
                 <configuration>
                     <excludes>
-                        <exclude>walkingkooka/j2cl/java/util/locale/LocaleProvider*</exclude>
-                        <exclude>walkingkooka/j2cl/java/util/timezone/support</exclude>
-                        <exclude>walkingkooka/j2cl/java/util/timezone/support/*</exclude>
+                        <exclude>**/generated/**</exclude>
                     </excludes>
                 </configuration>
                 <executions>
