--- a/pom.xml
+++ b/pom.xml
@@ -51,8 +51,8 @@
 
     <!-- ==================================================================== -->
     <properties>
-        <maven.compiler.source>1.9</maven.compiler.source>
-        <maven.compiler.target>1.9</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <maven-install-plugin.version>2.5.2</maven-install-plugin.version>
         <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -163,8 +163,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>11</source>
+                    <source>11</source>
                     <compilerArgs>
                         <arg>-Awalkingkooka.j2cl.java.util.Currency=XXX</arg>
                         <arg>-Awalkingkooka.j2cl.java.util.Locale=*</arg>
@@ -297,6 +297,7 @@
                     <cloneProjectsTo>${project.build.directory}/it-tests</cloneProjectsTo>
                     <debug>true</debug>
                     <invokerPropertiesFile>src/it/invoker.properties</invokerPropertiesFile>
+                    <invokerTest>gwt-jar-test</invokerTest>
                     <localRepositoryPath>${project.build.directory}/it-repo</localRepositoryPath>
                     <settingsFile>src/it/settings.xml</settingsFile>
                     <streamLogs>false</streamLogs>
